"fixed footer color contrast"

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -236,7 +236,7 @@ h2 {
 
 /*-----------FOOTER------------*/
 footer {
-    background-color: var(--main-color);
+    background-color: white;
     padding: 1rem 10px;
     text-align: center;
 }
@@ -266,5 +266,5 @@ footer {
 
 footer span,
 footer p {
-    color: white;
+    color: var(--main-color);
 }
